--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-button {
   display: block;
-  margin: 0 auto;
+  margin: 10px;
   padding: 10px 20px;
   background-color: #25d366;
   color: #fff;
